# CFDWatcher

./: .gitignore  AUTHORS  Makefile.am  README  configure.in  vol3d.glade
samples/: Track1.igc  Track2.igc  Track3.igc  Wpts
src/: About.xpm  Makefile.am  callbacks.c  callbacks.h  config.cfg  interface.c  interface.h  logo.xpm  main.c  readtrack.c  readtrack.h  support.c  support.h
